# hx-20-crt-disk

./: CMakeLists.txt  readme.md
src/: CMakeLists.txt  application.qrc  comms-debug.cpp  comms-debug.hpp  disk-drive-adapters.cpp  disk-drive.hpp  dockwidgettitlebar.cpp  dockwidgettitlebar.hpp  hx20-crt-dev-gfx-cfg.cpp  hx20-crt-dev-gfx-cfg.hpp  hx20-crt-dev-gfx-cfg.ui  hx20-crt-dev-text-cfg.cpp  hx20-crt-dev-text-cfg.hpp  hx20-crt-dev-text-cfg.ui  hx20-crt-dev.cpp  hx20-crt-dev.hpp  hx20-crt.cpp  hx20-default-chars.hpp  hx20-disk-dev.cpp  hx20-disk-dev.hpp  hx20-ser-proto.cpp  hx20-ser-proto.hpp  mainwindow.cpp  mainwindow.hpp  settings.cpp  settings.hpp  tf20-adapters.cpp  tf20-adapters.hpp
src/hx20-devices/crt/: hx20-crt-dev-gfx-cfg.cpp  hx20-crt-dev-text-cfg.cpp  hx20-crt-dev.cpp  hx20-crt-dev.hpp
src/hx20-devices/disk/: disk-drive-adapters.cpp  disk-drive-adapters.hpp  hx20-disk-dev.cpp  hx20-disk-dev.hpp  tf20-adapters.cpp  tf20-adapters.hpp  tf20drivedirectory.cpp  tf20drivedirectory.hpp  tf20drivediskimage.cpp  tf20drivediskimage.hpp
src/images/16/: disk_active.xcf  disk_inactive.xcf
src/images/32/: disk_active.xcf  disk_inactive.xcf
src/tools/: CMakeLists.txt
src/tools/proto-dumper/: CMakeLists.txt  hx20-crt-proto.c
src/tools/teledisk/: CMakeLists.txt  epsondisk.h  lzh.cpp  lzh.hpp  lzhdec.cpp  lzhstreams.hpp  lzhtest.cpp  main.cpp  parser.cpp  parser.hpp  savetest.cpp  teledisk.h
